--- a/setup/heapster.yaml
+++ b/setup/heapster.yaml
@@ -16,11 +16,12 @@ spec:
       serviceAccountName: heapster
       containers:
       - name: heapster
-        image: gcr.io/google_containers/heapster-arm:v1.3.0
+        image: gcr.io/google_containers/heapster-arm:v1.4.2
         imagePullPolicy: IfNotPresent
         command:
         - /heapster
-        - --source=kubernetes
+        - --source=kubernetes:https://kubernetes.default
+        - --sink=influxdb:http://monitoring-influxdb.kube-system.svc:8086
 ---
 apiVersion: v1
 kind: Service
