Update deployments to `apps/v1`

--- a/rabbitmq/rabbit-single.yaml
+++ b/rabbitmq/rabbit-single.yaml
@@ -1,7 +1,7 @@
 #####################################################################################
 # Single node Rabbit MQ server.
 ---
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbitmq
