--- a/rabbitmq/rabbit-k8s-cluster.yaml
+++ b/rabbitmq/rabbit-k8s-cluster.yaml
@@ -57,7 +57,7 @@ spec:
     name: cluster
 #####################################################################################
 ---
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbitmq
