--- a/setup/heapster.yaml
+++ b/setup/heapster.yaml
@@ -7,6 +7,9 @@ metadata:
   namespace: kube-system
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      k8s-app: heapster
   template:
     metadata:
       labels:
