--- a/gogs/pv.yaml
+++ b/gogs/pv.yaml
@@ -19,5 +19,5 @@ spec:
     - rsize=8192
     - wsize=8192
   nfs:
-    path: /volume1/Ops/git
-    server: 192.168.1.127
+    path: /media/share/git
+    server: 192.168.1.10
