--- a/setup/grafana.yaml
+++ b/setup/grafana.yaml
@@ -1,3 +1,43 @@
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nfs-grafana
+  labels:
+    k8s-app: grafana
+spec:
+  capacity:
+    storage: 5Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  mountOptions:
+    - vers=3
+    - rw
+    - hard
+    - intr
+    - rsize=8192
+    - wsize=8192
+  nfs:
+    path: /media/share/grafana
+    server: 192.168.1.10
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nfs-grafana
+  labels:
+    k8s-app: grafana
+spec:
+  resources:
+    requests:
+      storage: 5Gi
+  accessModes:
+    - ReadWriteOnce
+  selector:
+    matchLabels:
+      k8s-app: grafana
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,22 +53,23 @@ spec:
         k8s-app: grafana
     spec:
       containers:
-      - name: grafana
-        image: grafana/grafana
-        ports:
-          - containerPort: 3000
-            protocol: TCP
-        volumeMounts:
-        #        - mountPath: /var
-        #          name: grafana-storage
-        env:
-          - name: GF_SERVER_HTTP_PORT
-            value: "3000"
-          - name: GF_SERVER_ROOT_URL
-            value: /
+        - name: grafana
+          image: grafana/grafana
+          ports:
+            - containerPort: 3000
+              protocol: TCP
+          volumeMounts:
+            - mountPath: /var
+              name: grafana-storage
+          env:
+            - name: GF_SERVER_HTTP_PORT
+              value: "3000"
+            - name: GF_SERVER_ROOT_URL
+              value: /
       volumes:
-      - name: grafana-storage
-        emptyDir: {}
+        - name: grafana-storage
+          persistentVolumeClaim:
+            claimName: nfs-grafana
 ---
 apiVersion: v1
 kind: Service
